--- a/src/demo3_backend/Cargo.toml
+++ b/src/demo3_backend/Cargo.toml
@@ -10,6 +10,9 @@ crate-type = ["cdylib"]
 
 [dependencies]
 candid = "0.8.4"
-ic-cdk = "0.8.1"
-ic-wasi-polyfill = { git = "https://github.com/wasm-forge/ic-wasi-polyfill", version = "0.3.5" }
+ic-cdk = "0.8"
+hex = "0.4.3"
+serde = "1.0.163"
+serde_json = "1.0"
+ic-wasi-polyfill = { git = "https://github.com/wasm-forge/ic-wasi-polyfill", version = "0.3.9", features = ["report_wasi_calls"] }
 rusqlite = { git = "https://github.com/rusqlite/rusqlite", version = "0.29.0", features = ["bundled", "wasm32-wasi-vfs"] }
