--- a/src/demo3_backend/Cargo.toml
+++ b/src/demo3_backend/Cargo.toml
@@ -9,10 +9,12 @@ edition = "2021"
 crate-type = ["cdylib"]
 
 [dependencies]
-candid = "0.8.4"
-ic-cdk = "0.8"
+candid = "0.10"
+ic-cdk = "0.13"
 hex = "0.4.3"
 serde = "1.0.164"
 serde_json = "1.0.97"
-ic-wasi-polyfill = { git = "https://github.com/wasm-forge/ic-wasi-polyfill", version = "0.3.10", features = ["report_wasi_calls"] }
-rusqlite = { git = "https://github.com/rusqlite/rusqlite", version = "0.29.0", features = ["bundled", "wasm32-wasi-vfs"] }
+
+ic-wasi-polyfill = {version = "0.4.1", features = ["transient", "report_wasi_calls"]}
+rusqlite = {version = "0.31", features = ["bundled", "wasm32-wasi-vfs"] }
+
