update version, add upgrade example

--- a/src/demo3_backend/Cargo.toml
+++ b/src/demo3_backend/Cargo.toml
@@ -15,6 +15,6 @@ hex = "0.4.3"
 serde = "1.0.164"
 serde_json = "1.0.97"
 
-ic-wasi-polyfill = {version = "0.4.1", features = ["transient", "report_wasi_calls"]}
+ic-wasi-polyfill = {version = "0.5"}
 rusqlite = {version = "0.31", features = ["bundled", "wasm32-wasi-vfs"] }
 
