--- a/benchmark/src/ic_rusqlite_bench_backend/Cargo.toml
+++ b/benchmark/src/ic_rusqlite_bench_backend/Cargo.toml
@@ -9,12 +9,14 @@ edition = "2021"
 crate-type = ["cdylib"]
 
 [dependencies]
-candid = "0.8.4"
-ic-cdk = "0.8.1"
+candid = "0.10.10"
+ic-cdk = "0.15"
 hex = "0.4.3"
-serde = "1.0.163"
+serde = "1.0.205"
 serde_json = "1.0"
-ic-cdk-timers = "0.2" # Feel free to remove this dependency if you don't need timers
-#ic-wasi-polyfill = { git = "https://github.com/wasm-forge/ic-wasi-polyfill", rev = "8b836a9ffac80885e0a217f936d6117d9c0ad9a5", features = ["transient"]}
-ic-wasi-polyfill = { git = "https://github.com/wasm-forge/ic-wasi-polyfill", rev = "8b836a9ffac80885e0a217f936d6117d9c0ad9a5"}
-rusqlite = { git = "https://github.com/rusqlite/rusqlite", version = "0.29.0", features = ["bundled", "wasm32-wasi-vfs"] }
+
+ic-stable-structures = "0.6.5"
+
+#ic-wasi-polyfill = { path = "../../../../ic-wasi-polyfill", version = "0.6"}
+ic-wasi-polyfill = { version = "0.5"}
+rusqlite = { version = "0.31.0", features = ["wasm32-wasi-vfs", "bundled"] }
