introduce using mounted memory files

--- a/benchmark/src/ic_rusqlite_bench_backend/Cargo.toml
+++ b/benchmark/src/ic_rusqlite_bench_backend/Cargo.toml
@@ -17,6 +17,5 @@ serde_json = "1.0"
 
 ic-stable-structures = "0.6.5"
 
-#ic-wasi-polyfill = { path = "../../../../ic-wasi-polyfill", version = "0.6"}
-ic-wasi-polyfill = { version = "0.5"}
+ic-wasi-polyfill = { path = "../../../../ic-wasi-polyfill", version = "0.6"}
 rusqlite = { version = "0.31.0", features = ["wasm32-wasi-vfs", "bundled"] }
