--- a/benchmark/src/ic_rusqlite_bench_backend/Cargo.toml
+++ b/benchmark/src/ic_rusqlite_bench_backend/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 crate-type = ["cdylib"]
 
 [dependencies]
+canbench-rs = { version = "0.1.4"}
 candid = "0.10.10"
 ic-cdk = "0.15"
 hex = "0.4.3"
@@ -17,5 +18,10 @@ serde_json = "1.0"
 
 ic-stable-structures = "0.6.5"
 
-ic-wasi-polyfill = { path = "../../../../ic-wasi-polyfill", version = "0.6"}
+#ic-wasi-polyfill = { path = "../../../../ic-wasi-polyfill", features = ["report_wasi_calls", "transient"] }
+ic-wasi-polyfill = "0.6.3"
+
+#stable-fs = { path = "../../../../stable-fs" }
+
 rusqlite = { version = "0.31.0", features = ["wasm32-wasi-vfs", "bundled"] }
+
